mobile overflow fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,9 +22,9 @@
     color: #000;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
+html, body {
+    height: 100dvh;
+    width: 100%;
     background-color: var(--c-bg);
     color: var(--c-pri);
     overflow: hidden;
@@ -106,7 +106,6 @@ select:-webkit-autofill:focus {
     width: var(--ui-el-h);
 }
 #editbtn {
-    /* width: var(--ui-el-w); */
     display: none;
 }
 #recbtn {
